--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@mercadopago/sdk-react": "^0.0.13",
+    "@paypal/react-paypal-js": "^8.1.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -19,6 +21,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
+    "mercadopago": "^1.5.17",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
@@ -29,5 +32,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@types/mercadopago": "^1.5.8"
   }
 }
